# introduction-to-zephyr

./: Dockerfile.espressif_st  Dockerfile.st  README.md
scripts/espressif_st/: west.yml
scripts/st/: west.yml
workspace/apps/02_hello_blink/: CMakeLists.txt
workspace/apps/02_hello_blink/boards/: b_u585i_iot02a.overlay
workspace/apps/02_hello_blink/lib/libmylib/: CMakeLists.txt
workspace/apps/02_hello_blink/lib/libmylib/src/: mylib.c
workspace/apps/02_hello_blink/src/: main.c
workspace/apps/03_kconfig_float/: CMakeLists.txt  README.md  prj.conf
workspace/apps/03_kconfig_float/boards/: b_u585i_iot02a.conf
workspace/apps/03_kconfig_float/src/: main.c
workspace/apps/04_button_led/: CMakeLists.txt
workspace/apps/04_button_led/boards/: b_u585i_iot02a.overlay
workspace/apps/04_button_led/src/: main.c
workspace/apps/05_demo_adc/boards/: b_u585i_iot02a.overlay
workspace/apps/05_pwm_knob/: CMakeLists.txt  prj.conf
workspace/apps/05_pwm_knob/boards/: b_u585i_iot02a.overlay
workspace/apps/05_pwm_knob/src/: main.c
workspace/apps/06_demo_device_driver/boards/: b_u585i_iot02a.overlay
workspace/apps/06_i2c_driver/: CMakeLists.txt  prj.conf
workspace/apps/06_i2c_driver/boards/: b_u585i_iot02a.overlay
workspace/apps/06_i2c_driver/src/: main.c
workspace/modules/ilps28qsw/: CMakeLists.txt  Kconfig
workspace/modules/ilps28qsw/drivers/: CMakeLists.txt  Kconfig
workspace/modules/ilps28qsw/drivers/ilps28qsw/: CMakeLists.txt  Kconfig  ilps28qsw.c  ilps28qsw.h
workspace/modules/ilps28qsw/zephyr/: module.yaml
(+1 files in other folders)
